# twins-detector-parser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  parser.cpp  run.sh  twins.wrl
gdml/: arms.gdml  bottom.gdml  copper_core_left.gdml  copper_core_right.gdml  copper_shielding.gdml  dewer_left.gdml  dewer_right.gdml  lead_box_lower.gdml  lead_box_upper.gdml  lead_lid.gdml
geant4/lib/: libG4ptl.so.2.3.3
geant4/lib/cmake/Geant4/: Geant4Config.cmake  Geant4ConfigVersion.cmake  Geant4LibraryDepends-release.cmake  Geant4LibraryDepends.cmake  Geant4PackageCache.cmake
geant4/lib/cmake/Geant4/PTL/: PTLTargets-release.cmake  PTLTargets.cmake
geant4/lib/pkgconfig/: G4ptl.pc
geant4/share/Geant4/data/G4ABLA3.3/: README
geant4/share/Geant4/data/G4EMLOW8.5/: History  README
geant4/share/Geant4/data/G4EMLOW8.5/JAEAESData/: README
geant4/share/Geant4/data/G4EMLOW8.5/XRayReflection_data/: README
geant4/share/Geant4/data/G4EMLOW8.5/brem_SB/: README
geant4/share/Geant4/data/G4EMLOW8.5/dna/: README
geant4/share/Geant4/data/G4EMLOW8.5/epics2017/: README
geant4/share/Geant4/data/G4EMLOW8.5/ion_stopping_data/: README
geant4/share/Geant4/data/G4EMLOW8.5/ioni/: README
geant4/share/Geant4/data/G4EMLOW8.5/livermore/: README
geant4/share/Geant4/data/G4INCL1.2/: README
geant4/share/Geant4/data/G4NDL4.7.1/: README
geant4/share/Geant4/geant4make/: geant4make.csh  geant4make.sh
simulation/: CMakeCache.txt  CMakeLists.txt  G4History.macro  Makefile  cmake_install.cmake  run-sim.sh  test  vis.mac
simulation/src/: DetectorConstruction.cpp
(+144 files in other folders)
